--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ disable = [
   "E0401",
   "F0010",
   "W0718", # disable=broad-exception-caught
-  "W0201",
-  "E0611"
+  "W0201"
 ]
+ignore-patterns = ".*?_test.py"
 
 [tool.isort]
 multi_line_output = 3
