Change dir in snyk, and fix mypy action

--- a/.github/workflows/python-linting.yml
+++ b/.github/workflows/python-linting.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Build coverage file
         run: |
-          pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/
+          pytest --junitxml=pytest.xml --cov-report=xml:coverage.xml --cov=hax tests/
 
       - name: Pytest coverage comment
         id: coverageComment
