fix linting issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ max-attributes = 16
 disable = [
   "E0401",
   "F0010",
-  "W0718", # disable=broad-exception-caught
-  "W0201"
+  "W0718", # broad-exception-caught
+  "W0201",
+  "R0901" # too-many-ancestors
 ]
 ignore-patterns = ".*?_test.py"
 
