--- a/.github/workflows/python-linting.yml
+++ b/.github/workflows/python-linting.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r hax/requirements.txt
+          pip install types-PyYAML types-requests
 
       - name: Check python format
         run: |
