--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -15,6 +15,9 @@ jobs:
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: hax
 
     steps:
       - uses: actions/checkout@v3
@@ -30,7 +33,8 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --file=hax/requirements.txt --severity-threshold=high --sarif-file-output=snyk.sarif
+          args: --file=hax/requirements.txt --project-name=python --severity-threshold=high --sarif-file-output=snyk.sarif /hax
+          command: test
 
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v2
