--- a/website/webapp/package.json
+++ b/website/webapp/package.json
@@ -10,44 +10,26 @@
 	"license": "MIT",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^14.0.0",
-		"@testing-library/user-event": "^14.4.3",
-		"react-hook-form": "^7.45.1",
-		"react-icons": "^4.10.1",
-		"react-awesome-reveal": "^4.2.5",
-		"dotenv": "^16.3.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-helmet": "^6.1.0",
-		"react-scripts": "5.0.1",
-		"web-vitals": "^3.3.2"
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "aos": "^3.0.0-beta.6",
+    "next": "^13.4.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "^5.1.3"
 	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"prettier": {
-		"tabWidth": 2
-	}
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+	"devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/aos": "^3.0.4",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
+  }
 }
