Add new logo (#6)
* Add new logo

* Add pyinstaller lib to requirements

--- a/hax/config.yml
+++ b/hax/config.yml
@@ -1,5 +1,6 @@
 images:
   logo: "hax/static/images/logo.png"
+  icon: "hax/static/images/icon.png"
   path: "hax/static/images"
 app:
   size: "800x375"
