--- a/website/terraform/terraform.tfvars.example
+++ b/website/terraform/terraform.tfvars.example
@@ -1,7 +1,7 @@
 app                = "hax"
 region             = "us-east-1"
-domain             = "hax.mulla.au"
-alert_emails       = ["alert@mulla.au"]
+domain             = "haxsec.com"
+alert_emails       = ["alert@haxsec.com"]
 images_path        = "./files/images"
 website_files_path = "./files/website"
 tags               = {}
